<resources>
    <string name="app_name">WatchMe</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="movie_title">Title</string>
    <string name="movie_details">Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="reviewed_by">Reviewed By:</string>
    <string name="review">Review:</string>

    <string name="no_reviews">

        There are no reviews for this movie.</string>

   <string name="no_favorite_movies">

        No favorites Yet</string>

    <string name="movies_parcelable_object">movies</string>

    <string name="preference_sort_order_label">Sort Order</string>
    <string name="preference_sort_order_key">sortOrder</string>
    <string name="preference_most_popular">Most Popular</string>
    <string name="preference_highest_rated">Highest Rated</string>
    <string name="preference_favorites">Favorites</string>

    <string name="movie_content_description">Movie Thumbnail</string>
    <string name="movie_backdrop_content_description">Movie Backdrop</string>
    <string name="rating_content_description">Rating</string>

    <string name="refresh">Movies Refreshed</string>
    <string name="favorite_movies">favorite movies</string>
    <string name="apiKeyError">Please obtain an Api Key from themoviedb.org</string>
    <string name="onNoInternetError">Error connecting to the internet</string>
    <string name="unknownError">Unknown Error</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rating</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_list">Details</string>
    <string name="title_review">Reviews</string>
    <string name="title_trailer">Trailers</string>
    <string name="title_home">Home</string>
    <string name="title_trailers">Trailers:</string>
    <string name="title_reviews">Reviews:</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movie_id">Notifications</string>
    <string name="title_database_name">favorites</string>
    <string name="title_added_to_favorites">Added to favorites</string>
    <string name="title_removed_from_favorites">Removed from favorites</string>
    <string name="title_already_added_to_favorites">Already Added to favorites</string>
    <string name="title_already_removed_from_favorites">Already Removed from favorites</string>

    <string name="no_api_data">No Api Data</string>
    <string name="on_bind_view_holder">onBindViewHolder:  </string>
    <string name="on_response">onResponse:   </string>
    <string name="on_failure">onFailure:   </string>
    <string name="on_exception">on Exception: </string>



</resources>
