<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_popular"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        android:title="@string/title_popular" />

    <item
        android:id="@+id/navigation_top_rated"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/title_top_rated" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24px"
        android:title="@string/title_favorite" />

    <!--item
        android:id="@+id/navigation_trailer"
        android:icon="@drawable/ic_trailer"
        android:title="@string/title_trailer" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_rating_full"
        android:title="@string/title_review" /-->

</menu>
