<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:showIn="@layout/activity_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <!--tools:context=".DetailActivity"-->


    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/movie_details_layout"
            >

            <TextView
                android:id="@+id/text_view_movie_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/movie_title"
                />
            <TextView
                android:id="@+id/text_view_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:padding="@dimen/layout_padding"
                tools:text="@string/movie_title"
                app:layout_constraintTop_toBottomOf="@id/text_view_movie_name_title"
                />

            <TextView
                android:id="@+id/text_view_plot_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/plot"
                app:layout_constraintTop_toBottomOf="@id/text_view_movie_name"
                />
            <TextView
                android:id="@+id/text_view_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:padding="@dimen/layout_padding"
                tools:text="@string/plot"
                app:layout_constraintTop_toBottomOf="@id/text_view_plot_title"
                />

            <TextView
                android:id="@+id/text_view_rating_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/plot"
                app:layout_constraintTop_toBottomOf="@id/text_view_plot_synopsis"
                />
            <TextView
                android:id="@+id/text_view_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:padding="@dimen/layout_padding"
                tools:text="@string/rating"
                app:layout_constraintTop_toBottomOf="@id/text_view_rating_title"
                />
            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_bar"
                tools:rating="3.5"
                android:stepSize="0.01"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                app:mrb_progressTint="@color/colorYellow"
                android:isIndicator="true"
                app:layout_constraintLeft_toRightOf="@id/text_view_user_rating"
                app:layout_constraintTop_toBottomOf="@id/text_view_rating_title"
                />
            <TextView
                android:id="@+id/text_view_release_date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/release"
                app:layout_constraintTop_toBottomOf="@id/text_view_plot_synopsis"
                />
            <TextView
                android:id="@+id/text_view_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:padding="@dimen/layout_padding"
                tools:text="@string/release"
                app:layout_constraintTop_toBottomOf="@id/text_view_release_date_title"

                />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
